ZFIN-6554 place duplicate sequence rows into single multi-pub link